# microsoft-teams-mcp

./: README.md  pyproject.toml
src/microsoft_teams_mcp/: __init__.py  server.py
